Fix spacing between text and button for desktop screen

--- a/style.css
+++ b/style.css
@@ -81,3 +81,8 @@ button:hover {
   opacity: 0.75;
   margin-bottom: 25px;
 }
+@media only screen and (min-width: 1440px) {
+  .group__item .text {
+    margin-bottom: 83px;
+  }
+}
